--- a/.github/workflows/fetch-ranking.yml
+++ b/.github/workflows/fetch-ranking.yml
@@ -15,30 +15,24 @@ jobs:
 
       - name: Fetch data & update README
         run: |
-          echo "Fetching API..."
           DATA=$(curl -s "${{ secrets.API_URL }}")
-
-          echo "RAW:"
-          echo "$DATA"
-          
-          ITEMS=$(echo "$DATA" | jq '.data')
-
-          echo "Building Markdown table..."
-
+      
+          ITEMS=$(echo "$DATA" | jq -c '.data[]')
+      
           OUTPUT="## Weekly Idol Ranking\n\n"
           OUTPUT+="Terakhir update: $(date '+%Y-%m-%d %H:%M:%S')\n\n"
           OUTPUT+="| Rank | Name | Msg/Week | Prev Rank |\n"
           OUTPUT+="|------|------|-----------|-----------|\n"
-
-          echo "$ITEMS" | jq -c '.[]' | while read row; do
+      
+          for row in $ITEMS; do
             rank=$(echo "$row" | jq -r '.rank')
             name=$(echo "$row" | jq -r '.name')
             messages=$(echo "$row" | jq -r '.messages_per_week')
             prev=$(echo "$row" | jq -r '.previous_rank')
-
+      
             OUTPUT+="| $rank | $name | $messages | $prev |\n"
           done
-
+      
           echo -e "$OUTPUT" > README.md
 
       - name: Commit changes
