--- a/.github/workflows/fetch-ranking.yml
+++ b/.github/workflows/fetch-ranking.yml
@@ -15,7 +15,6 @@ jobs:
 
       - name: Fetch data & update README
         run: |
-          # Fetch API
           DATA="$(curl -s \
             -H 'User-Agent: Mozilla/5.0' \
             -H 'Accept: application/json' \
@@ -30,15 +29,15 @@ jobs:
           OUTPUT+="| Rank | Name | Msg/Week | Prev Rank |\n"
           OUTPUT+="|------|------|-----------|-----------|\n"
       
-          # ITERASI AMAN TANPA MERUSAK JSON
-          echo "$DATA" | jq -c '.data[]' | while read -r row; do
-            rank=$(echo "$row" | jq -r '.rank')
-            name=$(echo "$row" | jq -r '.name')
-            messages=$(echo "$row" | jq -r '.messages_per_week')
-            prev=$(echo "$row" | jq -r '.previous_rank')
+          # INI CARA BENAR → TIDAK SUBSHELL
+          while IFS= read -r row; do
+            rank=$(jq -r '.rank' <<< "$row")
+            name=$(jq -r '.name' <<< "$row")
+            messages=$(jq -r '.messages_per_week' <<< "$row")
+            prev=$(jq -r '.previous_rank' <<< "$row")
       
             OUTPUT+="| $rank | $name | $messages | $prev |\n"
-          done
+          done < <(echo "$DATA" | jq -c '.data[]')
       
           printf "%s\n" "$OUTPUT" > README.md
 
