Combine echo statements for markdown output

--- a/.github/workflows/fetch-ranking.yml
+++ b/.github/workflows/fetch-ranking.yml
@@ -31,8 +31,7 @@ jobs:
           {
             echo "## Weekly JKT48 PM Ranking"
             echo
-            echo "Update: $(date '+%Y-%m-%d %H:%M:%S')\n"
-            echo "Week range: $week_start → $week_end"
+            echo -e "Update: $(date '+%Y-%m-%d %H:%M:%S')\nWeek range: $week_start → $week_end"
             echo
             echo "| Rank | Name | Msg | Prev Rank |"
             echo "|------|------|-----|-----------|"
