--- a/.github/workflows/fetch-ranking.yml
+++ b/.github/workflows/fetch-ranking.yml
@@ -31,7 +31,8 @@ jobs:
           {
             echo "## Weekly JKT48 PM Ranking"
             echo
-            echo -e "Update: $(date '+%Y-%m-%d %H:%M:%S')\nWeek range: $week_start → $week_end"
+            printf "Update: %s\n" "$(date '+%Y-%m-%d %H:%M:%S')"
+            printf "Week range: %s → %s\n" "$week_start" "$week_end"
             echo
             echo "| Rank | Name | Msg | Prev Rank |"
             echo "|------|------|-----|-----------|"
